2003-11-16  Hans Breuer  <hans@breuer.org>
	* app/text/*.c : still unacceptable patched to compile
	without FT2, see bug #113681

	* **makefile.msc : updated

	* app/config/gimpconfig-dump.c : include gimpwin32-io.h

	* app/plug-in/plug-ins.c : don't depend on g_print handling
	%s with NULL pointers, it doesn't anymore with glib cvs at
	least not on win32

	* app/widgets/gimppropwidgets.c
	  libgimpbase/gimputils.c
	  libgimpwidgets/gimpmemsizeentry.c :
	sorry about the mess, need to work-around a stupi not able
	to cast from guint64 to double

	* app/widgets/gimppropwidgets.c (gimp_prop_memsize_entry_new) :
	avoid 'overflow in floating-point constant arithmetic' by disabling
	an imho alays questionable g_return_val_if_fail() for _MSC_VER only

	* libgimpmodule/gimpmodule.def : sorted

	* libgimpwidgets/gimpfileselection.c : removed unused S_ISDIR
	definition

	* app/gui/themes.c : filenames in rc files need to be escaped


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11479 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/composite/makefile.msc
+++ b/app/composite/makefile.msc
@@ -12,10 +12,18 @@ LT_RELEASE = $(PKG_VER)
 
 OBJECTS = \
 	gimp-composite.obj \
-	gimp-composite-dispatch.obj \
 	gimp-composite-generic.obj \
+	gimp-composite-generic-installer.obj \
 	gimp-composite-mmx.obj \
 	gimp-composite-sse.obj \
+	gimp-composite-sse2.obj \
+	\
+	gimp-composite-3dnow-installer.obj \
+	gimp-composite-altivec-installer.obj \
+	gimp-composite-mmx-installer.obj \
+	gimp-composite-sse-installer.obj \
+	gimp-composite-sse2-installer.obj \
+	gimp-composite-vis-installer.obj \
 
 mmx_sources = \
 	
