--- a/libgimpwidgets/makefile.msc
+++ b/libgimpwidgets/makefile.msc
@@ -46,6 +46,7 @@ OBJECTS = \
 	gimpcolorscale.obj \
 	gimpcolorscales.obj \
 	gimpcolorselect.obj \
+	gimpcolorselection.obj \
 	gimpcolorselector.obj \
 	gimpdialog.obj \
 	gimpfileselection.obj \
@@ -77,6 +78,7 @@ gimpunit.obj : ..\app\gimpunit.c
 gimpwidgets-$(GIMP_VER).dll : $(OBJECTS) gimpwidgets.def
 	$(CC) $(CFLAGS) -LD -Fegimpwidgets-$(GIMP_VER).dll $(OBJECTS) \
 	..\libgimpcolor\gimpcolor-$(GIMP_VER).lib \
+	..\libgimpbase\gimpbase-$(GIMP_VER).lib \
 	$(DEPLIBS) $(LDFLAGS) user32.lib /def:gimpwidgets.def
 
 #	..\app\gimp.lib \
