--- a/configure.in
+++ b/configure.in
@@ -1036,6 +1036,20 @@ AC_SUBST(LIBWMF)
 AC_SUBST(WMF_CFLAGS)
 
 
+################
+# Check for lcms
+################
+
+have_lcms=no
+AC_CHECK_LIB(lcms, cmsCreateProofingTransform, [
+  AC_CHECK_HEADER(lcms.h,
+    have_lcms=yes
+    LCMS_LIBS="-llcms")])
+
+AC_SUBST(LCMS_LIBS)
+AM_CONDITIONAL(HAVE_LCMS, test $have_lcms = yes)
+
+
 ############################################################
 # GIF compression: Allow builder to specify at compile time
 # which compression style she wants to use for GIFs.
