--- a/configure.in
+++ b/configure.in
@@ -1044,7 +1044,13 @@ have_lcms=no
 AC_CHECK_LIB(lcms, cmsCreateProofingTransform, [
   AC_CHECK_HEADER(lcms.h,
     have_lcms=yes
-    LCMS_LIBS="-llcms")])
+    LCMS_LIBS="-llcms", [
+    AC_CHECK_HEADER(lcms/lcms.h,
+      have_lcms=yes
+      AC_DEFINE(HAVE_LCMS_LCMS_H, 1,
+        [Define to 1 if the lcms header must be included as lcms/lcms.h])
+      LCMS_LIBS="-llcms")])
+])
 
 AC_SUBST(LCMS_LIBS)
 AM_CONDITIONAL(HAVE_LCMS, test $have_lcms = yes)
