2003-11-21  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/makefile.msc: s/gimpfileselection/gimpfileentry/


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11555 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpwidgets/makefile.msc
+++ b/libgimpwidgets/makefile.msc
@@ -49,7 +49,7 @@ OBJECTS = \
 	gimpcolorselection.obj \
 	gimpcolorselector.obj \
 	gimpdialog.obj \
-	gimpfileselection.obj \
+	gimpfileentry.obj \
 	gimphelpui.obj \
 	gimpmemsizeentry.obj \
 	gimpoffsetarea.obj \
