2003-11-21  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpcolordisplaystack.[ch]: new object
	GimpColorDisplayStack which manages a list of GimpColorDisplays.
	(unfinished, just for others to look at).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11556 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpwidgets/Makefile.am
+++ b/libgimpwidgets/Makefile.am
@@ -74,6 +74,8 @@ libgimpwidgets_1_3_la_sources = \
 	gimpcolorbutton.h	\
 	gimpcolordisplay.c	\
 	gimpcolordisplay.h	\
+	gimpcolordisplaystack.c	\
+	gimpcolordisplaystack.h	\
 	gimpcolornotebook.c	\
 	gimpcolornotebook.h	\
 	gimpcolorscale.c	\
@@ -136,6 +138,7 @@ libgimpwidgetsinclude_HEADERS = \
 	gimpcolorarea.h		\
 	gimpcolorbutton.h	\
 	gimpcolordisplay.h	\
+	gimpcolordisplaystack.h	\
 	gimpcolornotebook.h	\
 	gimpcolorscale.h	\
 	gimpcolorscales.h	\
