2003-11-22  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpwidgetsmarshal.list
	* libgimpwidgets/gimpcolordisplaystack.[ch]: added signals
	::added(), ::removed() and ::reordered() and emit them in the
	resp. functions.

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpcolordisplayeditor.[ch]: new widget implementing
	an editable view on a GimpColorDisplayStack. Most code taken from
	below...

	* app/display/gimpdisplayshell-filter-dialog.c: ...and removed
	here. Only creates a GimpDialog around a GimpColorDisplayEditor
	now.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11569 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -31,6 +31,8 @@ libappwidgets_a_sources = \
 	gimpcellrendererviewable.h	\
 	gimpchanneltreeview.c		\
 	gimpchanneltreeview.h		\
+	gimpcolordisplayeditor.c	\
+	gimpcolordisplayeditor.h	\
 	gimpcoloreditor.c		\
 	gimpcoloreditor.h		\
 	gimpcolorframe.c		\
