2003-11-24  Ville PÃ¤tsi  <drc@gimp.org>
        * gimp.spec.in: Fixed path creation typo.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11599 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/gimp.spec.in
+++ b/gimp.spec.in
@@ -99,8 +99,8 @@ make
 mkdir -p $RPM_BUILD_ROOT/%{prefix}/info $RPM_BUILD_ROOT/%{prefix}/include \
 	$RPM_BUILD_ROOT/%{prefix}/lib $RPM_BUILD_ROOT/%{prefix}/bin \
 	$RPM_BUILD_ROOT/%{desktopdir}/applications \
-	$RPM_BUILD_ROOT/%{desktopdir}/share/application-registry \
-	$RPM_BUILD_ROOT/%{desktopdir}/share/mime-info 
+	$RPM_BUILD_ROOT/%{desktopdir}/application-registry \
+	$RPM_BUILD_ROOT/%{desktopdir}/mime-info 
 make destdir=$RPM_BUILD_ROOT DESTDIR=$RPM_BUILD_ROOT install
 
 #
