2003-11-24  Michael Natterer  <mitch@gimp.org>
	* POTFILES.in: added app/widgets/gimpcolordisplayeditor.c

	* *.po: ran "make update-po" so all existing (but commented out)
	translations for the display filter dialog get merged back.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11600 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -261,6 +261,7 @@ app/widgets/gimpbrusheditor.c
 app/widgets/gimpbrushfactoryview.c
 app/widgets/gimpbufferview.c
 app/widgets/gimpchanneltreeview.c
+app/widgets/gimpcolordisplayeditor.c
 app/widgets/gimpcoloreditor.c
 app/widgets/gimpcolorframe.c
 app/widgets/gimpcolormapeditor.c
