2003-11-24  Sven Neumann  <sven@gimp.org>
	* configure.in: (hopefully) fixed the check for the symbol prefix.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11601 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -584,8 +584,8 @@ fi
 
 AC_MSG_CHECKING([whether symbols are prefixed])
 
-case "$target_or_host" in
-  *-*-mingw*)
+case "$host_os" in
+  mingw*)
     SYMPREFIX='_'
     ;;
   darwin* | rhapsody* | machten*)
