2003-11-22  Dave Neary  <bolsh@gimp.org>
	* libgimp/Makefile.am: Applied patch from  deaddog@deaddog.org (Abel
	Cheung) to make sure dependencies are built before we build libgimp and
	libgimpui. Fixes bug #127863.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11605 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimp/Makefile.am
+++ b/libgimp/Makefile.am
@@ -248,7 +248,7 @@ libgimp_1_3_la_LDFLAGS = \
 
 libgimp_1_3_la_LIBADD = $(libgimpcolor) $(libgimpbase) $(GLIB_LIBS) 
 
-libgimp_1_3_la_DEPENDENCIES = $(gimp_def)
+libgimp_1_3_la_DEPENDENCIES = $(gimp_def) $(libgimpcolor) $(libgimpbase)
 
 libgimpui_1_3_la_LDFLAGS = \
 	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
@@ -258,7 +258,7 @@ libgimpui_1_3_la_LDFLAGS = \
 libgimpui_1_3_la_LIBADD = $(libgimp) $(libgimpwidgets) $(libgimpcolor) \
 	 $(libgimpbase) $(libgimpmodule) $(GTK_LIBS)
 
-libgimpui_1_3_la_DEPENDENCIES = $(gimpui_def) $(libgimp)
+libgimpui_1_3_la_DEPENDENCIES = $(gimpui_def) $(libgimp) $(libgimpwidgets) $(libgimpbase)
 
 install-data-local: install-ms-lib install-libtool-import-lib
 
