--- a/configure.in
+++ b/configure.in
@@ -1041,16 +1041,21 @@ AC_SUBST(WMF_CFLAGS)
 ################
 
 have_lcms=no
-AC_CHECK_LIB(lcms, cmsCreateProofingTransform, [
+AC_CHECK_LIB(lcms, cmsCreate_sRGBProfile, [
   AC_CHECK_HEADER(lcms.h,
-    have_lcms=yes
-    LCMS_LIBS="-llcms", [
+    have_lcms=yes, [
     AC_CHECK_HEADER(lcms/lcms.h,
       have_lcms=yes
       AC_DEFINE(HAVE_LCMS_LCMS_H, 1,
-        [Define to 1 if the lcms header must be included as lcms/lcms.h])
-      LCMS_LIBS="-llcms")])
+        [Define to 1 if the lcms header must be included as lcms/lcms.h]))
+    ])
 ])
+
+if test $have_lcms = yes; then
+  LCMS_LIBS="-llcms"
+else
+  AC_MSG_WARN([*** color proof module will not be built (lcms not found or unuseable) ***])
+fi
 
 AC_SUBST(LCMS_LIBS)
 AM_CONDITIONAL(HAVE_LCMS, test $have_lcms = yes)
