2003-11-26  Sven Neumann  <sven@gimp.org>
	* Makefile.am:
	* configure.in
	* gimpthumb-1.3.pc.in
	* libgimpthumb/Makefile.am
	* libgimpthumb/gimpthumb-enums.h
	* libgimpthumb/gimpthumb-types.h
	* libgimpthumb/gimpthumb.def
	* libgimpthumb/gimpthumb.h
	* libgimpthumb/gimpthumb-utils.[ch]
	* libgimpthumb/gimpthumbnail.[ch]: added a first draft of
	libgimpthumb. The API isn't final and the implementation is
	incomplete. It compiles but don't attempt to use it yet.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11621 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,7 +28,10 @@ SUBDIRS = \
 bin_SCRIPTS = gimptool-$(LT_RELEASE) @GIMPINSTALL@
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = gimp-$(LT_RELEASE).pc gimpui-$(LT_RELEASE).pc
+pkgconfig_DATA = \
+	gimp-$(LT_RELEASE).pc		\
+	gimpthumb-$(LT_RELEASE).pc	\
+	gimpui-$(LT_RELEASE).pc
 
 EXTRA_SCRIPTS = gimpinstall-$(LT_RELEASE)
 
