2003-11-26  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/Makefile.am
	* libgimpthumb/gimpthumb-enums.h
	* libgimpthumb/gimpthumb-utils.[ch]
	* libgimpthumb/gimpthumbnail.[ch]: more changes, still unfinished.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11626 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpthumb/Makefile.am
+++ b/libgimpthumb/Makefile.am
@@ -68,6 +68,7 @@ libgimpthumbinclude_HEADERS = \
 	gimpthumb.h		\
 	gimpthumb-enums.h	\
 	gimpthumb-types.h	\
+	gimpthumb-utils.h	\
 	gimpthumbnail.h
 
 libgimpthumb_1_3_la_LDFLAGS = \
