--- a/configure.in
+++ b/configure.in
@@ -1297,6 +1297,7 @@ AC_SUBST(GIMP_MKENUMS)
 
 if test "x$have_gtk_2_3" != "xyes"; then
   CPPFLAGS="${CPPFLAGS} -DG_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED"
+  CPPFLAGS="${CPPFLAGS}"
 fi
 
 ############################
