2003-11-30  Sven Neumann  <sven@gimp.org>
	* app/main.c: renamed remaining occurences of "use_mmx" to
	"use_cpu_accel".

	* app/paint-funcs/paint-funcs.[ch]: removed unused "use_mmx"
	parameter.

	* app/base/base.c: changed accordingly.

	* docs/gimp-1.3.1.in: documented the changed command-line option.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11656 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/docs/gimp-1.3.1.in
+++ b/docs/gimp-1.3.1.in
@@ -1,10 +1,10 @@
-.TH GIMP 1 "13 November 2003" "Version @GIMP_VERSION@" "GIMP Manual Pages"
+.TH GIMP 1 "30 November 2003" "Version @GIMP_VERSION@" "GIMP Manual Pages"
 .SH NAME
 gimp - an image manipulation and paint program.
 .SH SYNOPSIS
 .B gimp
 [\-h] [\-\-help] [-v] [\-\-version] [\-\-verbose] [\-\-no\-shm]
-[\-\-no\-mmx] [\-\-display \fIdisplay\fP] [\-d] [\-\-no\-data]
+[\-\-no\-cpu\-accel] [\-\-display \fIdisplay\fP] [\-d] [\-\-no\-data]
 [\-f] [\-\-no\-fonts] [\-i] [\-\-no\-interface] [\-s] [\-\-no\-splash]
 [\-S] [\-\-no\-splash\-image] [\-\-session \fI<name>\fP]
 [\-g] [\-\-gimprc \fI<gimprc>\fP] [\-\-system\-gimprc \fI<gimprc>\fP]
@@ -50,8 +50,9 @@ Do not use shared memory between GIMP and its plugins.
 Instead of using shared memory, GIMP will send the data via pipe. This
 will result in slower performance than using shared memory.
 .TP 8
-.B \-\-no\-mmx
-Do not use MMX routines even if GIMP detects the availability of MMX.
+.B \-\-no\-cpu\-accel
+Do not use CPU accelerations such as MMX or SSE even if GIMP detects
+that your CPU provides this functionality.
 .TP 8
 .B \-d, \-\-no\-data
 Do not load patterns, gradients, palettes, or brushes. Often useful
