2003-12-02  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/Makefile.am
	* libgimpthumb/gimpthumb-error.[ch]: added new files that define the
	GIMP_THUMB_ERROR domain.

	* libgimpthumb/gimpthumb-utils.[ch]
	* libgimpthumb/gimpthumb.h
	* libgimpthumb/gimpthumbnail.[ch]: finalizing the API.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11661 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpthumb/Makefile.am
+++ b/libgimpthumb/Makefile.am
@@ -58,6 +58,8 @@ libgimpthumb_1_3_la_SOURCES = \
 	gimpthumb.h		\
 	gimpthumb-enums.c	\
 	gimpthumb-enums.h	\
+	gimpthumb-error.c	\
+	gimpthumb-error.h	\
 	gimpthumb-types.h	\
 	gimpthumb-utils.c	\
 	gimpthumb-utils.h	\
@@ -67,6 +69,7 @@ libgimpthumb_1_3_la_SOURCES = \
 libgimpthumbinclude_HEADERS = \
 	gimpthumb.h		\
 	gimpthumb-enums.h	\
+	gimpthumb-error.h	\
 	gimpthumb-types.h	\
 	gimpthumb-utils.h	\
 	gimpthumbnail.h
