2003-12-02  Manish Singh  <yosh@gimp.org>
        * plug-ins/common/Makefile.am
        * plug-ins/common/plugin-defs.pl
        * plug-ins/common/channel_mixer.c: Added channel mixer plugin.
        Needs some work still, notably the settings load/save handling.
        Addresses bug #113901.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11665 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/common/Makefile.am
+++ b/plug-ins/common/Makefile.am
@@ -40,6 +40,7 @@ libexec_PROGRAMS = \
 	$(BZ2) \
 	c_astretch \
 	ccanalyze \
+	channel_mixer \
 	checkerboard \
 	color_enhance \
 	colorify \
@@ -385,6 +386,18 @@ ccanalyze_SOURCES = \
 	ccanalyze.c
 
 ccanalyze_LDADD = \
+	$(top_builddir)/libgimp/libgimpui-$(LT_RELEASE).la		\
+	$(top_builddir)/libgimpwidgets/libgimpwidgets-$(LT_RELEASE).la	\
+	$(top_builddir)/libgimp/libgimp-$(LT_RELEASE).la		\
+	$(top_builddir)/libgimpcolor/libgimpcolor-$(LT_RELEASE).la	\
+	$(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la	\
+	@GTK_LIBS@							\
+	@INTLLIBS@
+
+channel_mixer_SOURCES = \
+	channel_mixer.c
+
+channel_mixer_LDADD = \
 	$(top_builddir)/libgimp/libgimpui-$(LT_RELEASE).la		\
 	$(top_builddir)/libgimpwidgets/libgimpwidgets-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimp/libgimp-$(LT_RELEASE).la		\
