--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -29,6 +29,7 @@ plug-ins/common/bumpmap.c
 plug-ins/common/bz2.c
 plug-ins/common/c_astretch.c
 plug-ins/common/ccanalyze.c
+plug-ins/common/channel_mixer.c
 plug-ins/common/checkerboard.c
 plug-ins/common/color_enhance.c
 plug-ins/common/colorify.c
